# Bachelorarbeit-Prototyp

./: docker-compose.yml
backend/: .env.example  pyproject.toml
backend/src/agent/: config.py  db.py  graph.py  ingest.py  injection_patterns.py  integration.py  middleware.py  vectorstore.py
backend/src/agent/subagents/: action.py  integration.py  knowledge.py
backend/src/agent/tools/: user.py
